--- a/files/default.conf
+++ b/files/default.conf
@@ -2,33 +2,13 @@ server {
   listen       80 default_server;
   server_name  _;
   root /var/www/html/;
-  index index.html index.php defualt.html default.php app.php;
+  index index.php;
 
   access_log /var/log/nginx/access.log main;
   error_log /var/log/nginx/error.log;
 
   location / {
-    if ($request_method = 'OPTIONS') {
-      add_header 'Access-Control-Allow-Origin' '*';
-      #
-      # Om nom nom cookies
-      #
-      add_header 'Access-Control-Allow-Credentials' 'true';
-      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PATCH, PUT, LINK';
-      #
-      # Custom headers and headers various browsers *should* be OK with but aren't
-      #
-      add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
-      #
-      # Tell client that this pre-flight info is valid for 20 days
-      #
-      add_header 'Access-Control-Max-Age' 1728000;
-      add_header 'Content-Type' 'text/plain charset=UTF-8';
-      add_header 'Content-Length' 0;
-      return 204;
-    }
-
-    try_files $uri /app.php$is_args$args;
+    try_files $uri /index.php$is_args$args;
   }
 
   location = /favicon.ico {
@@ -46,35 +26,9 @@ server {
   }
 
   location ~ \.php($|/) {
-    fastcgi_pass 127.0.0.1:9000;
-    fastcgi_split_path_info ^(.+\.php)(/.*)$;
-    include fastcgi_params;
-
-    set $script $uri;
-    set $path_info "";
-
-    if ($uri ~ "^(.+\.php)($|/)") {
-      set $script $1;
-    }
-
-    if ($uri ~ "^(.+\.php)(/.+)") {
-      set $script $1;
-      set $path_info $2;
-    }
-
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_param SCRIPT_NAME $script;
-    fastcgi_param PATH_INFO $path_info;
-    fastcgi_param REMOTE_ADDR $http_x_forwarded_for;
-    #fastcgi_param GEOIP_ADDR $remote_addr;
-    #fastcgi_param GEOIP_COUNTRY_CODE $geoip_country_code;
-    #fastcgi_param GEOIP_COUNTRY_NAME $geoip_country_name;
-    #fastcgi_param GEOIP_REGION $geoip_region;
-    #fastcgi_param GEOIP_REGION_NAME $geoip_region_name;
-    #fastcgi_param GEOIP_CITY $geoip_city;
-    #fastcgi_param GEOIP_AREA_CODE $geoip_area_code;
-    #fastcgi_param GEOIP_LATITUDE $geoip_latitude;
-    #fastcgi_param GEOIP_LONGITUDE $geoip_longitude;
-    #fastcgi_param GEOIP_POSTAL_CODE $geoip_postal_code;
+    #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+    include fastcgi.conf;
+    fastcgi_intercept_errors on;
+    fastcgi_pass127.0.0.1:9000;
   }
 }
