--- a/files/default.conf
+++ b/files/default.conf
@@ -25,7 +25,7 @@ server {
     deny  all;
   }
 
-  location ~ \.php($|/) {
+  location ~ \.php$ {
     #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
     include fastcgi.conf;
     fastcgi_intercept_errors on;
