--- a/files/default.conf
+++ b/files/default.conf
@@ -27,7 +27,7 @@ server {
 
   location ~ \.php$ {
     #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-    include fastcgi.conf;
+    include fastcgi_params;
     fastcgi_intercept_errors on;
     fastcgi_pass127.0.0.1:9000;
   }
